# fabridamicelli.github.io

./: .gitignore  .nojekyll  CNAME  Makefile  README.md  TODO.html  _quarto.yml  about.html  about.qmd  blog.html  blog.qmd  blog.xml  code.html  code.qmd  index.html  index.qmd  index.xml  links.html  links.qmd  listings.json  plausible.html  post-template.ipynb  posts.html  posts.qmd  posts.xml  pyproject.toml  research.html  research.qmd  robots.txt  search.json  sitemap.xml  til.html  til.qmd  til.xml
bigqueryrc/: index.html
posts/: 2019-11-30-divide-and-conquer.html  2019-11-30-divide-and-conquer.ipynb  2019-12-12-interactive-embedding.html  2019-12-12-interactive-embedding.ipynb  2020-05-10-numpy-array-in-place.html  2020-05-10-numpy-array-in-place.ipynb  2020-05-20-achtung-german-csv-reader.html  2020-05-20-achtung-german-csv-reader.ipynb  2021-09-18-starmap.html  2021-09-18-starmap.ipynb  2021-10-10-merge_dicts.html  2021-10-10-merge_dicts.ipynb  2021-10-16-lr_add_constant.html  2021-10-16-lr_add_constant.ipynb  2022-01-29-chainmap.html  2022-01-29-chainmap.ipynb  2022-08-04-seaborn-tensors.html  2022-08-04-seaborn-tensors.ipynb  2023-06-23-np-array-tobytes.html  2023-07-13-optimize-fastapi.html  2023-09-13-pytorch-dataloader-collate.html  2023-09-13-pytorch-dataloader-collate.ipynb  2024-02-26-python-print-flush.html  2024-05-19-bigqueryrc.html  2024-06-23-np-array-tobytes.ipynb  2024-07-13-optimize-fastapi.ipynb  2024-07-24-parse-jsonl.html  2024-07-24-parse-jsonl.ipynb  2024-07-26-parse-jsonl.html  2024-07-26-parse-jsonl.ipynb  2024-12-08-numhack.ipynb  (+16 more)
(+43 files in other folders)
